added itemname & texture for journal

--- a/src/main/resources/assets/tetra/lang/en_US.lang
+++ b/src/main/resources/assets/tetra/lang/en_US.lang
@@ -3,6 +3,7 @@ itemGroup.tetra=Tetra
 ###############################
 # JOURNAL
 ###############################
+item.journal.name=Holosphere
 journal.craft.breadcrumb.root=Items
 journal.craft.sword=Blades
 journal.craft.toolbelt=Toolbelts
