fixed up AS display in journal

--- a/src/main/resources/assets/tetra/lang/en_US.lang
+++ b/src/main/resources/assets/tetra/lang/en_US.lang
@@ -51,6 +51,9 @@ stats.durability.tooltip=This item has §e%s§r durability
 stats.speed=Speed
 stats.speed.tooltip=Affects how fast this item can be swinged\n\n§e%s §7seconds between swings\n§ex%s§7 gathering speed multiplier
 
+stats.speed_normalized=Speed
+stats.speed_normalized.tooltip=Changes attack speed by §e%s
+
 stats.damage=Damage
 stats.damage.tooltip=Deals §e%s §rdamage
 
