--- a/src/main/resources/assets/tetra/lang/en_US.lang
+++ b/src/main/resources/assets/tetra/lang/en_US.lang
@@ -137,6 +137,11 @@ stats.shovel.tooltip=This item can be used for digging\n\n§7Shovel tier: §e%s\
 stats.cut.tooltip=This item can be used for cutting, usable for crafting and for breaking webs and plants\n\n§7Cut tier: §e%s\n§7:sCut efficiency: §e%s
 stats.pry.tooltip=This item can be used for prying things open, usable for salvaging\n\n§7Pry tier: §e%s\n§7:sPry efficiency: §e%s
 
+
+stats.integrity=Integrity
+stats.integrity.tooltip_positive=This module provides §e%s§r integrity
+stats.integrity.tooltip_negative=This module requires §e%s§r integrity
+
 stats.integrity_usage=Integrity usage: %s/%s
 stats.integrity_usage.tooltip=Integrity is provided by some modules (often in a specific slot), while it is required by other modules and most improvements.
 
