--- a/src/main/resources/assets/tetra/lang/en_US.lang
+++ b/src/main/resources/assets/tetra/lang/en_US.lang
@@ -190,6 +190,8 @@ forged_container.compartment=Compartment %s
 tile.hammer_base.name=Hammer base
 tile.hammer_head.name=Hammer head
 
+tile.transfer_unit.name=Transfer unit
+
 item.forged_bolt.name=Bolt
 salvage_bolt_action.label=Salvage
 
