--- a/src/main/resources/assets/tetra/lang/en_US.lang
+++ b/src/main/resources/assets/tetra/lang/en_US.lang
@@ -191,6 +191,10 @@ tile.hammer_base.name=Hammer base
 tile.hammer_head.name=Hammer head
 
 tile.transfer_unit.name=Transfer unit
+tile.core_extractor.name=Core extractor
+tile.extractor_piston.name=Extractor piston
+tile.extractor_pipe.name=Extractor pipe
+tile.seeping_bedrock.name=Seeping bedrock
 
 item.forged_bolt.name=Bolt
 salvage_bolt_action.label=Salvage
