--- a/src/main/resources/assets/tetra/lang/en_US.lang
+++ b/src/main/resources/assets/tetra/lang/en_US.lang
@@ -151,7 +151,7 @@ stats.fortune.tooltip=Increases drop chance when harvesting or salvaging blocks
 stats.quickStrike=Quick
 stats.quickStrike.tooltip=Reduces the minimum damage dealt to §e%s§r while the attack cooldown is active
 
-stats.softStrike=SoftStrike
+stats.softStrike=Soft strike
 stats.softStrike.tooltip=Items crafted using this tool gains increased durability
 
 stats.fierySelf=Blazing
@@ -175,13 +175,19 @@ stats.toolbelt.quiver.tooltip=Has §e%s§r quiver slots
 stats.toolbelt.booster=Boost strength
 stats.toolbelt.booster.tooltip=Provides jump boost and limited flight with strength §e%s
 
+stats.criticalStrike=Critical strike
+stats.criticalStrike.tooltip=Has a chance to critically hit when hitting entities or breaking blocks.\n\n§e%s§7 chance to deal §e%s §7damage\n§e%s§7 chance to instantly break blocks\n\n§7This effect cannot occur for blocks that are exceptionally hard
 
-stats.hammer.tooltip=This item can be used for hammering, usable when crafting and salvaging\n\n§7Hammer tier: §e%s\n§7:sHammer efficiency: §e%s
-stats.axe.tooltip=This item can be used for chopping wood\n\n§7Axe tier: §e%s\n§7:sAxe efficiency: §e%s
-stats.pickaxe.tooltip=This item can be used for mining\n\n§7Pickaxe tier: §e%s\n§7:sPickaxe efficiency: §e%s
-stats.shovel.tooltip=This item can be used for digging\n\n§7Shovel tier: §e%s\n§7:sShovel efficiency: §e%s
-stats.cut.tooltip=This item can be used for cutting, usable for crafting and for breaking webs and plants\n\n§7Cut tier: §e%s\n§7:sCut efficiency: §e%s
-stats.pry.tooltip=This item can be used for prying things open, usable for salvaging\n\n§7Pry tier: §e%s\n§7:sPry efficiency: §e%s
+stats.intuit=Intuit
+stats.intuit.tooltip=Experience gained from killing entities and destroying blocks yields honing progress at a §e%sx§r ratio
+
+
+stats.hammer.tooltip=This item can be used for hammering, usable when crafting and salvaging\n\n§7Hammer tier: §e%s\n§7Hammer efficiency: §e%s
+stats.axe.tooltip=This item can be used for chopping wood\n\n§7Axe tier: §e%s\n§7Axe efficiency: §e%s
+stats.pickaxe.tooltip=This item can be used for mining\n\n§7Pickaxe tier: §e%s\n§7Pickaxe efficiency: §e%s
+stats.shovel.tooltip=This item can be used for digging\n\n§7Shovel tier: §e%s\n§7Shovel efficiency: §e%s
+stats.cut.tooltip=This item can be used for cutting, usable for crafting and for breaking webs and plants\n\n§7Cut tier: §e%s\n§7Cut efficiency: §e%s
+stats.pry.tooltip=This item can be used for prying things open, usable for salvaging\n\n§7Pry tier: §e%s\n§7Pry efficiency: §e%s
 
 
 stats.integrity=Integrity
